--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <div class="bg-dark bg-gradient ">
             <div class=" container text-success">
-                <div class="row">
+                <div class="row align-items-center">
                     <div class="col-lg-6 col-12">
                         <p>Computer-controlled digital transistorized with electronic advance</p>
                         <h1 class="text-white">Honda CBR 300R</h1>
@@ -31,7 +31,36 @@
                             consequat
                             duis
                             enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                        <button type="button" class="btn btn-danger btn-lg">Purchase</button>
+
+                        <!-- Modal area start -->
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            Purchase
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        I am Shahin Mahmud Fokira developer
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Modal area end -->
 
 
                     </div>
@@ -167,11 +196,11 @@
             <div class=" ">
                 <div class="row align-items-center">
 
-                    <div class="col-lg-5 col-12 text-center py-4">
+                    <div class="col-lg-6 col-12 text-center  py-5">
 
                         <img class="w-100" src="images/Fahsgf.png" alt="">
                     </div>
-                    <div class="col-lg-7 col-12">
+                    <div class="col-lg-6 col-12">
                         <div class="accordion" id="accordionPanelsStayOpenExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
